# OpenGLExample

./: .gitmodules  CMakeLists.txt  LICENSE
assets/meshes/: test.glb
assets/meshes/bad/: bad.gltf
assets/meshes/demo0/: demo0.gltf
assets/meshes/demo1/: demo1.gltf
assets/meshes/demo2/: demo2.gltf
assets/meshes/demo4/: demo4.gltf
assets/meshes/demo5/: demo5.gltf
include/: mesh.h  model.h
src/: glb_loading.cpp  model_loading.cpp  tinygltf.cpp
